--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,16 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0 # For API calls
   provider: ^6.0.0 # For state management
-  firebase_core: ^2.0.0 # For Firebase integration (optional)
-  firebase_auth: ^4.0.0 # For authentication (optional)
   google_maps_flutter: ^2.0.0
   tflite_flutter: ^0.11.0
   image_picker: ^1.1.2
   image: ^4.2.0
+  url_strategy: ^0.2.0  # For cleaner URLs in web
+  universal_html: ^2.2.4
+  http_parser: ^4.0.0
+  shared_preferences: ^2.5.2
+  jwt_decoder: ^2.0.1
+  
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +72,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/models/waste_model.tflite
+     - assets/models/waste_classifier2.tflite
+     - assets/models/waste_recommendation_model.tflite
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
