--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   http_parser: ^4.0.0
   shared_preferences: ^2.5.2
   jwt_decoder: ^2.0.1
+  intl: ^0.19.0
+  google_generative_ai: ^0.2.2
   
 
 dev_dependencies:
@@ -74,6 +76,9 @@ flutter:
   assets:
      - assets/models/waste_classifier2.tflite
      - assets/models/waste_recommendation_model.tflite
+     - assets/Logo.jpeg
+     - assets/login_bg.jpeg
+     - assets/background.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
