--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
      - assets/models/waste_classifier2.tflite
      - assets/models/waste_recommendation_model.tflite
      - assets/models/advanced_price_predictor.tflite
+     - assets/models/waste_hotspot_model.tflite
      - assets/Logo.jpeg
      - assets/login_bg.jpeg
      - assets/background.jpeg
